refactoring: NotificationService